# py-http-server

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  db.sqlite3  main.py  pyproject.toml
apps/posts/: admin.py  models.py
apps/posts/migrations/: 0001_initial.py  0002_post_updated_at.py  0003_alter_post_options_alter_post_author_and_more.py  0004_post_image_post_title.py
apps/users/: models.py  serializers.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py
config/: settings.py
